# PAW-APP

./: .gitignore  README.md  THIRD-PARTY-LICENSES.md  next.config.js  package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.mjs
.devcontainer/: Dockerfile  devcontainer.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: avatar_processor.rs  lib.rs
src/app/: globals.css  layout.jsx  page.jsx
src/app/about/: page.jsx
src/app/appearance/: page.jsx
src/app/database_updates/: page.jsx
src/app/favorites/: page.jsx
src/app/favourites/: page.jsx
src/app/folders/: page.jsx
src/app/login/: page.jsx
src/app/players/: page.jsx
src/app/random/: page.jsx
src/app/recent/: page.jsx
src/components/: 2fa-modal.jsx  avatar-card.jsx  avatar-grid.jsx  avatar-info-dialogue.jsx  recent-avatar-grid.jsx  refresh-dialogue.jsx  search-input.jsx  sidebar.jsx  similar-avatars-graph.jsx  snow-fall.jsx  theme-provider.jsx  theme-toggle.jsx
src/context/: cache-scanner-context.jsx  database-context.jsx  language-provider-context.jsx  log-scanner-context.jsx  paw-context.jsx  vrc-log-context.jsx  vrchat-context.jsx
src/hooks/: use-mobile.jsx
src/lib/: utils.js
translations/: en.json
