[package]
name = "PAW"
version = "0.2.0"
description = "The app counterpart of PAW created using Tauri."
authors = ["Amelia"]
license = "AGPL-3.0"
repository = "https://github.com/Ameliaaaaaaa/PAW-APP"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
dirs = "5.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
tauri-plugin-shell = "2"