[package]
name = "PAW"
version = "0.6.1"
description = "The app counterpart of PAW created using Tauri."
authors = ["Amelia"]
license = "AGPL-3.0"
repository = "https://github.com/Ameliaaaaaaa/PAW-APP"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
dirs = "5.0"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-rusqlite2 = "2.0.3"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-shell = "2"
vrc-log = "0.14.0"
crossbeam = "0.8"
tokio = { version = "1", features = ["rt", "macros"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
